# honegumi-rag-assistant

./: .coveragerc  .env.example  .gitignore  .isort.cfg  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE.txt  NEXT_STEPS_RAG_EXPERIMENTS.md  README.md  README_PYPI.md  app.py  environment.yml  requirements-validation.txt  requirements.txt  setup.cfg  setup.py
.github/: copilot-instructions.md
.github/workflows/: README_VALIDATION.md  copilot-setup-steps.yml  validate-code-files-batched.yml  validate-code-files-parallel.yml  validate-code-files.yml
data/: .gitignore
data/processed/: .gitignore
data/processed/evaluation/: validation_report.yaml
data/processed/evaluation/code_files/: honegumi_generated_10_experimentalist_basic_corrected.py  honegumi_generated_10_industrial_practitioner_corrected.py  honegumi_generated_10_research_scientist_corrected.py  honegumi_generated_11_experimentalist_basic_corrected.py  honegumi_generated_11_industrial_practitioner_corrected.py  honegumi_generated_11_research_scientist_corrected.py  honegumi_generated_12_experimentalist_basic_corrected.py  honegumi_generated_12_industrial_practitioner_corrected.py  honegumi_generated_12_research_scientist_corrected.py  honegumi_generated_13_experimentalist_basic_corrected.py  honegumi_generated_13_industrial_practitioner_corrected.py  honegumi_generated_13_research_scientist_corrected.py  honegumi_generated_14_experimentalist_basic_corrected.py  honegumi_generated_14_industrial_practitioner_corrected.py  honegumi_generated_14_research_scientist_corrected.py  honegumi_generated_15_experimentalist_basic_corrected.py  honegumi_generated_15_industrial_practitioner_corrected.py  honegumi_generated_15_research_scientist_corrected.py  honegumi_generated_16_experimentalist_basic_corrected.py  honegumi_generated_16_industrial_practitioner_corrected.py  honegumi_generated_16_research_scientist_corrected.py  honegumi_generated_17_experimentalist_basic_corrected.py  honegumi_generated_17_industrial_practitioner_corrected.py  honegumi_generated_17_research_scientist_corrected.py  honegumi_generated_18_experimentalist_basic_corrected.py  honegumi_generated_18_industrial_practitioner_corrected.py  honegumi_generated_18_research_scientist_corrected.py  honegumi_generated_19_experimentalist_basic_corrected.py  honegumi_generated_19_industrial_practitioner_corrected.py  honegumi_generated_19_research_scientist_corrected.py  honegumi_generated_1_experimentalist_basic_corrected.py  honegumi_generated_1_industrial_practitioner_corrected.py  honegumi_generated_1_research_scientist_corrected.py  honegumi_generated_20_experimentalist_basic_corrected.py  honegumi_generated_20_industrial_practitioner_corrected.py  honegumi_generated_20_research_scientist_corrected.py  honegumi_generated_21_experimentalist_basic_corrected.py  honegumi_generated_21_industrial_practitioner_corrected.py  honegumi_generated_21_research_scientist_corrected.py  honegumi_generated_22_experimentalist_basic_corrected.py  (+51 more)
data/processed/evaluation_natural/: review_checklist.yaml
data/raw/: README_RAG_EXPERIMENTS.md  problem_statements.yaml  rag_assistant_runs.yaml
docs/: conf.py  index.md  requirements.txt
docs/_static/: honegumi_rag_assistant_logo.pptx
honegumi_rag_output/: honegumi_generated_239dbaab01f0.py
notebooks/: honegumi_rag_colab_tutorial.ipynb  preprocess_problems.ipynb  template.ipynb
scripts/: README.md  batch_process.py  build_vector_store.py  run_experiments_and_upload.sh  run_rag_experiments.py  test_vector_store.py  train_model.py  validate_code_files.py
src/honegumi_rag_assistant/: __init__.py  __main__.py  app_config.py  build_vector_store.py  extractors.py  orchestrator.py  states.py  timing_utils.py
src/honegumi_rag_assistant/nodes/: __init__.py  code_writer.py  parameter_selector.py  retrieval_planner.py  retriever.py  reviewer.py  skeleton_generator.py
tests/: conftest.py
(+38 files in other folders)
