# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = honegumi_rag_assistant
description = Agentic AI system for generating Bayesian optimization code from natural language using LangGraph and OpenAI GPT models
author = Hasan Muhammad Sayeed
author_email = hasan.sayeed.71.93@gmail.com
license = MIT
license_files = LICENSE.txt
long_description = file: README_PYPI.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/hasan-sayeed/honegumi_rag_assistant
# Add here related links, for example:
project_urls =
    Documentation = https://github.com/hasan-sayeed/honegumi_rag_assistant
    Source = https://github.com/hasan-sayeed/honegumi_rag_assistant
    Tracker = https://github.com/hasan-sayeed/honegumi_rag_assistant/issues

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.11

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    openai==2.3.0
    langchain-openai==0.3.35
    honegumi==0.4.3
    langchain==0.3.27
    langchain-community==0.3.31
    langgraph==0.6.10
    faiss-cpu==1.12.0
    python-dotenv
    numpy==2.3.3
    pandas==2.3.3


[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install honegumi_rag_assistant[PDF]` like:
# PDF = ReportLab; RXP

# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    pytest-cov

[options.entry_points]
# Console scripts - these create command-line tools when package is installed
console_scripts =
    honegumi-rag = honegumi_rag_assistant.__main__:main

[tool:pytest]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags to avoid this pytest issue.
addopts =
    --cov honegumi_rag_assistant --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.6
package = honegumi_rag_assistant
extensions =
    dsproject
    no_skeleton
    pre_commit
